# panda_trefoil_trajectory

./: CMakeLists.txt  README.md  package.xml
scripts/: EE_pos.py  Joints_evolution.py  Trefoil.py  joints_data.csv  robot_data.csv
src/: trefoil_trajectory.cpp
